--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ set(TESTFILES        # All .cpp files in tests/
     test-aww-guid.cpp
     test-aww-open.cpp
     test-aww-api.cpp
+    test-aww-web.cpp
 )
 
 set(TEST_MAIN unit_tests)   # Default name for test executable (change if you wish).
