--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     - name: Install dependencies UBUNTU
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get update && sudo apt-get install -y build-essential libgtk-3-dev libwebkit2gtk-4.0-dev xvfb
+      run: sudo apt-get update && sudo apt-get install -y build-essential #webview: libgtk-3-dev libwebkit2gtk-4.0-dev xvfb
     
     - name: Checkout Code
       uses: actions/checkout@v2
